test/examples/bad/shadowing.ml
(* The first val should not apply to the second x *)
val x : int
let x = 42

let x = "hello"
